--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body{
 
     /*for this projecct only*/
     display: grid;
-    min-height: 100vh;
     place-content: center;
     margin: 1rem;
 }
@@ -64,6 +63,7 @@ body{
     border-radius: 0.5rem;
     overflow: hidden;
     max-width: 600px;
+    margin: 75px auto;
 }
 
 @media (min-width: 600px){
@@ -125,4 +125,8 @@ body{
 
 .button:is(:hover, :focus){
     background-color: var(--clr-primary-500);
+}
+
+.attribution{
+    text-align: center;
 }
